--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -77,7 +77,7 @@ body {
             transition: background-color 0.3s;
 
             &:hover {
-            background-color: darken(variaveis.$primary-color, 10%);
+            background-color: color.adjust(variaveis.$primary-color, $lightness: -10%);
             }
 }
 }
